[package]
name = "colour-rs"
version = "0.1.0"
authors = ["brunph <brunph@nakedpeople.party>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3", features = ["winuser", "consoleapi", "winbase", "processenv", "winnt", "wincon"] }